# my-reads

./: CHANGELOG.md  CHANGELOG.org  LICENSE  README.md  README.org  TODO.org  cabal.project  my-reads.cabal
app/: CrawlDouban.hs  Douban.hs  Download.hs  Goodread.hs  HtmlToken.hs  Main.hs  OrgMode.hs  ParseBookItemNode.hs  Types.hs  Utils.hs
app/Data/Tree/: Ext.hs
app/Douban/: Download.hs  HtmlToken.hs  ParseBookItemNode.hs  PocLens.hs  Types.hs  Utils.hs
app/Text/HTML/: Utils.hs
data/: douban-read.json  douban-read.org  goodread.org  goodreads_library_export.csv  read-1.html  read-2.html  read-3.html  read-4.html  read-5.html  read-6.html  read-7.html  read.json
