cabal-version:      2.4
name:               my-reads
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: my reading history and backlog

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
author: Haisheng Wu

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer: Haisheng Wu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.org
                    , README.org
                    , TODO.org

-- TODO: what's the way to create share dependencies cross different lib/exe??
--

executable crawl-douban
    main-is:          CrawlDouban.hs

    -- Modules included in this executable, other than Main.
    other-modules:  Data.Tree.Ext
                  , Text.HTML.Utils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base           ^>=4.14.0.0 && < 4.15,
                      bytestring      >= 0.10.12 && < 0.11,
                      containers      >= 0.6.5 && < 0.7,
                      html-parse      >= 0.2.0 && < 0.3,
                      text            >= 1.2.4 && < 1.3,
                      http-conduit    >= 2.3.8 && < 2.4,
                      pretty-simple   >= 4.1.1 && < 4.2
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: OverloadedStrings
                      , ImportQualifiedPost
