cabal-version:      2.4
name:               my-reads
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           my reading history and backlog

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
author:             Haisheng Wu

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         Haisheng Wu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.org
  README.org

-- https://cabal.readthedocs.io/en/latest/developing-packages.html#common-stanzas
common shared-prop
  build-depends:
    , base           >=4.14.0.0 && <5
    , bytestring     >=0.10.12  && <0.12
    , pretty-simple  ^>=4.1.1
    , text           ^>=1.2.4

  default-language:   Haskell2010
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings
    RecordWildCards
    TupleSections

  other-modules:      OrgMode
  ghc-options:
    -Wall -Wtabs -Wunused-binds -Wunused-do-bind -Wpartial-fields

executable goodread
  import:         shared-prop
  main-is:        Goodread.hs
  hs-source-dirs: app
  build-depends:
    , cassava
    , isbn
    , vector

executable douban
  import:         shared-prop
  main-is:        Douban.hs
  build-depends:
    , aeson          ^>=2.1
    , containers     ^>=0.6.5
    , directory      ^>=1.3.8
    , html-parse     ^>=0.2.0
    , http-conduit   ^>=2.3.8
    , lens           ^>=5.2
    , pretty-simple  ^>=4.1.1

  -- Modules included in this executable, other than Main.
  other-modules:
    Data.Tree.Ext
    Douban.Download
    Douban.HtmlToken
    Douban.Types
    Douban.Utils
    Text.HTML.Utils

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  hs-source-dirs: app
